--- a/index.html
+++ b/index.html
@@ -3,25 +3,233 @@
   <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
-    <title>index.html</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="./style.css">
+    <title>Homepage</title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
+<!-- Navbar Section -->
+<section>
+    <div class="container-fluid">
+        <div class="nav-wrapper">
+            <div class="row">
+                <div class="col-6 text-center col-lg-2">
+                    <div class="logo mt-3">
+                        <img src="./src/2.png" alt="Logo" class="img-fluid">
+                    </div>
+                </div>
+                <div class="col-6 col-lg-6">
+                    <nav class="navbar navbar-expand-lg navbar-light ">
+                        <button class="navbar-toggler mx-auto mt-2" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                          <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <div class="collapse navbar-collapse mt-3" id="navbarSupportedContent">
+                          <ul class="navbar-nav mr-auto">
+                            <li class="nav-item nav-item1">
+                              <a class="nav-link nav-link1" href="#">Home</a>
+                            </li>
+                            <li class="nav-item nav-item1">
+                              <a class="nav-link nav-link1" href="#">OUR PATIENTS</a>
+                            </li>
+                            <li class="nav-item nav-item1">
+                                <a class="nav-link nav-link1" href="#">PROVIDERS/REFERRALS</a>
+                            </li>
+                            <li class="nav-item nav-item1">
+                                <a class="nav-link nav-link1" href="#">RESOURCES</a>
+                            </li>
+                            <li class="nav-item nav-item1">
+                                <a class="nav-link nav-link1" href="#">MEET US</a>
+                            </li>
+                            <li class="nav-item nav-item1">
+                                <a class="nav-link nav-link1" href="#">CONTACT</a>
+                            </li>
+                          </ul>
+                        </div>
+                      </nav>
+                </div>
+                <div class="col-6 text-center col-lg-2">
+                  <div class="call-us">
+                    <button><a href="#">call us for consultation <br><span class="contact">(864) 482-3483</span></a></button>
+                  </div>
+                </div>
+                <div class="col-6 text-center col-lg-2">
+                  <div class="appointment">
+                    <button><a href="#">make an appointment</a></button>
+                  </div>
+                </div>
 
-    <!-- Optional JavaScript; choose one of the two! -->
-
-    <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <!--
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
-    -->
+            </div>
+        </div>
+    </div>
+</section>
+<!-- Banner Section -->
+<section>
+  <div class="container-fluid">
+    <div class="banner-wrapper">
+      <div class="row d-flex justify-content-center">
+        <div class="col-12 col-lg-6">
+          <div class="banner-content-wrapper">
+            <div class="banner-content">
+              <h6>Radical Love. Radical Service. A Radical Change.</h6>
+              <h1>Magdalene Clinic</h1>
+              <p>Our aim is to provide a safe, non-judgmental, loving space for women who 
+                  are using or have used illicit drugs during their pregnancy to seek prenatal care.
+              </p>
+            </div>
+            <div class="banner-btn">
+              <div class="help-btn">
+                <button><a href="#">Help Me</a></button>
+              </div>
+              <div class="patient-btn">
+                <button><a href="#">Patient Refferals</a></button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<!-- Footer Section -->
+<div class="container-fluid">
+  <div class="footer-wrapper">
+    <div class="container">
+      <div class="footer-icon-wrapper">
+        <div class="row">
+          <div class="col-12 col-lg-4">
+            <div class="icon-wrapper">
+              <div class="icon">
+                <a href="#"><img src="./src/54.png" alt="Image" class="img-fluid"></a>
+              </div>
+              <div class="icon-text mt-3">
+                <h6>Magdalene Clinic Oconee</h6>
+                <p>139 Lila Doyle Drive, Seneca, SC, 29672</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-lg-4">
+            <div class="icon-wrapper">
+              <div class="icon">
+                <a href="#"><img src="./src/53.png" alt="Image" class="img-fluid"></a>
+              </div>
+              <div class="icon-text mt-3">
+                <h6>Call us now</h6>
+                <p>(864) 482-3483, press 9 - then press 1</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-lg-4">
+            <div class="icon-wrapper">
+              <div class="icon">
+                <a href="#"><img src="./src/52.png" alt="Image" class="img-fluid"></a>
+              </div>
+              <div class="icon-text mt-3">
+                <h6>Need support? Drop us an email</h6>
+                <p>magdaleneclinicoconee@prismahealth.org</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-12">
+            <div class="line"></div>
+          </div>
+        </div>
+      </div>
+      <div class="footer-links-wrapper">
+        <div class="row">
+          <div class="col-12 col-lg-4">
+            <div class="social-icon-wrapper">
+              <div class="footer-logo">
+                <img src="./src/62.png" alt="Image" class="img-fluid">
+              </div>
+              <div class="footer-social-content">
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquid sequi harum obcaecati 
+                  laboriosaLorem Ipsum is simply dummy text of the printing and typesetting industry. 
+                  Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
+                  when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+              </div>
+              <div class="footer-social-icons">
+                <div class="footer-icon1">
+                  <a href="#"><img src="./src/60.png" alt="" class="img-fluid"></a>
+                </div>
+                <div class="footer-icon">
+                  <a href="#"><img src="./src/61.png" alt="" class="img-fluid"></a>
+                </div>
+                <div class="footer-icon">
+                  <a href="#"><img src="./src/57.png" alt="" class="img-fluid"></a>
+                </div>
+                <div class="footer-icon">
+                  <a href="#"><img src="./src/59.png" alt="" class="img-fluid"></a>
+                </div>
+                <div class="footer-icon">
+                  <a href="#"><img src="./src/58.png" alt="" class="img-fluid"></a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-6 col-lg-2">
+            <div class="quick-link-wrapper mt-2">
+              <h6>Quick Links</h6>
+              <div class="footer-nav">
+                <ul>
+                  <li><a href="#">Home</a></li>
+                  <li><a href="#">Our Patients</a></li>
+                  <li><a href="#">Providers/Refferals</a></li>
+                  <li><a href="#">Resources</a></li>
+                  <li><a href="#">Meet US</a></li>
+                  <li><a href="#">Contact Us</a></li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div class="col-6 col-lg-3">
+            <div class="footer-services mt-2">
+              <h6>Services</h6>
+              <p>Prenatal Care (care for pregnant women)
+                Mental Health Counseling
+                Peer support for women struggling 
+                with substance use disorders. 
+                </p>
+            </div>
+          </div>
+          <div class="col-12 col-lg-3">
+            <div class="opening-hours">
+              <h4>Opening Hours</h4>
+              <h6>Magdalene Clinic:</h6>
+              <p>Wed 9am-12pm</p>
+              <h6>Magdalene Clinic:</h6>
+              <p>Fri 8am-12pm</p>
+              <h6>OBGYN Center:</h6>
+              <p>Mon-Fri 8am-5pm</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- Copyright Section -->
+<section>
+  <div class="container-fluid">
+    <div class="copyright-wrapper">
+      <div class="row">
+        <div class="col-12">
+          <div class="copyright text-center pt-3">
+            <p>© 2023 Magdalene Clinic · All Rights Reserved · Privacy Policy·</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
   </body>
 </html>
