--- a/index.html
+++ b/index.html
@@ -69,24 +69,240 @@
 <section>
   <div class="container-fluid">
     <div class="banner-wrapper">
-      <div class="row d-flex justify-content-center">
+      <div class="container">
+        <div class="banner-main-wrapper">
+          <div class="row d-flex justify-content-center">
+            <div class="col-12 col-lg-6">
+              <div class="banner-content-wrapper">
+                <div class="banner-content">
+                  <h6>Radical Love. Radical Service. A Radical Change.</h6>
+                  <h1>Magdalene Clinic</h1>
+                  <p>Our aim is to provide a safe, non-judgmental, loving space for women who 
+                      are using or have used illicit drugs during their pregnancy to seek prenatal care.
+                  </p>
+                </div>
+                <div class="banner-btn">
+                  <div class="help-btn">
+                    <button><a href="#">Help Me</a></button>
+                  </div>
+                  <div class="patient-btn">
+                    <button><a href="#">Patient Refferals</a></button>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+            <div class="row no-gutters">
+              <div class="col-12 col-lg-4">
+                <div class="banner-card-wrapper">  
+                <div class="banner-card-img d-flex justify-content-center">
+                    <img src="./src/9.png" alt="Image" class="img-fluid">
+                  </div>
+                  <div class="banner-card-content">
+                    <h6>All-in-One Care</h6>
+                    <p>At each visit, patients have the opportunity to meet with any or all of the following: 
+                      a Maternal-Fetal Medicine physician, 
+                      a women's health Nurse Practitioner, a women's health nurse.</p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-12 col-lg-4">
+                <div class="banner-card-wrapper">  
+                <div class="banner-card-img d-flex justify-content-center">
+                    <img src="./src/10.png" alt="Image" class="img-fluid">
+                  </div>
+                  <div class="banner-card-content">
+                    <h6>Dignity First</h6>
+                    <p>As part of our core values of love and transparency, we want to offer expecting mothers with 
+                      substance use disorders the comfort of dignity in their experience with us. .</p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-12 col-lg-4">
+                <div class="banner-card-wrapper">  
+                <div class="banner-card-img d-flex justify-content-center">
+                    <img src="./src/11.png" alt="Image" class="img-fluid">
+                  </div>
+                  <div class="banner-card-content">
+                    <h6>Judgement-Free</h6>
+                    <p>At Magdalene Clinic we do not judge you, we are here to help, and 
+                      we are a safe place to come when you may feel overwhelmed or "lost" in your pregnancy or substance use.</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<!-- Welcome to Magdalene Clinic -->
+<section>
+  <div class="container">
+    <div class="magdalene-clinic-wrapper">
+      <div class="row">
         <div class="col-12 col-lg-6">
-          <div class="banner-content-wrapper">
-            <div class="banner-content">
-              <h6>Radical Love. Radical Service. A Radical Change.</h6>
-              <h1>Magdalene Clinic</h1>
-              <p>Our aim is to provide a safe, non-judgmental, loving space for women who 
-                  are using or have used illicit drugs during their pregnancy to seek prenatal care.
-              </p>
+          <div class="magdalene-clinic-content">
+            <h6>Welcome to Magdalene Clinic</h6>
+            <h3>Lorem ipsum dolor sit amet</h3>
+            <p>The Magdalene Clinic was born out of a series of discussions that started in 2016, both with obstetricians 
+              who were frustrated that they did not feel well equipped to provide care for patients with substance use disorders (SUD), 
+              and with patients, who were frustrated by the burden of separate visits for their SUD and their pregnancy, and by what they 
+              experienced as feeling at times shamed, judged, or misunderstood by providers in the prenatal setting. There has to be a better way, 
+              we said. What could that look like?</p>
+              <p>The Magdalene Clinic represents our response to the need 
+              we found in our own community for pregnant women with SUD to receive compassionate medical care and social support under one roof.</p> 
+          </div>
+          <div class="about-btn">
+            <button><a href="#">More About Us</a></button>
+          </div>
+        </div>
+        <div class="col-12 col-lg-6">
+          <div class="magdalene-clinic-img">
+            <img src="./src/13.png" alt="Image" class="img-fluid">
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<!-- Services Section -->
+<div class="container-fluid">
+  <div class="service-wrapper">
+    <div class="container">
+      <div class="row">
+        <div class="col-12">
+          <div class="service-heading">
+            <h6>Our Services</h6>
+            <h3>Lorem ipsum dolor sit amet</h3>
+          </div>
+        </div>
+      </div>
+      <div class="row d-flex no-gutters">
+        <div class="col-12 col-lg-4">
+          <div class="service-card-wrapper">
+            <div class="service-card-img d-flex justify-content-center">
+              <img src="./src/16.png" alt="Image" class="img-fluid">
             </div>
-            <div class="banner-btn">
-              <div class="help-btn">
-                <button><a href="#">Help Me</a></button>
-              </div>
-              <div class="patient-btn">
-                <button><a href="#">Patient Refferals</a></button>
+            <div class="service-arrow">
+              <div class="arrow-down">
+
               </div>
             </div>
+            <div class="service-card-content">
+              <h6>Prenatal Care (care for pregnant women)</h6>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                Quisque ornare scelerisque erat vel rutrum. Duis sem enim, tempor gravida.</p>
+              <button><a href="#">Read More »</a></button>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-lg-4">
+          <div class="service-card-wrapper">
+            <div class="service-card-content service-card-content-mid">
+              <h6>Mental Health Counseling</h6>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                Quisque ornare scelerisque erat vel rutrum. Duis sem enim, tempor gravida.</p>
+              <button><a href="#">Read More »</a></button>
+            </div>
+            <div class="service-arrow">
+              <div class="arrow-up">
+
+              </div>
+            </div>
+            <div class="service-card-img d-flex justify-content-center">
+              <img src="./src/19.png" alt="Image" class="img-fluid">
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-lg-4">
+          <div class="service-card-wrapper">
+            <div class="service-card-img d-flex justify-content-center">
+              <img src="./src/20.png" alt="Image" class="img-fluid">
+            </div>
+            <div class="service-arrow">
+              <div class="arrow-down">
+
+              </div>
+            </div>
+            <div class="service-card-content">
+              <h6>Peer support for women struggling</h6>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                Quisque ornare scelerisque erat vel rutrum. Duis sem enim, tempor gravida.</p>
+              <button><a href="#">Read More »</a></button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- Doctor Patient Section-->
+<section>
+  <div class="container">
+    <div class="doctor-patient-wrapper">
+      <div class="row d-flex no-gutters">
+        <div class="col-12 col-lg-6">
+          <div class="our-patient-wrapper">
+            <div class="patient-heading">
+              <div class="patient-img">
+                <img src="./src/47.png" alt="Image" class="img-fluid">
+              </div>
+              <h3>Our Patients</h3>
+            </div>
+            <div class="patient-content">
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque ornare scelerisque erat vel rutrum. 
+                Duis sem enim, tempor sed gravida imperdiet, bibendum et purus. Donec egestas lectus at sapien 
+                hendrerit non convallis magna scelerisque. Mauris hendrerit erat sit amet enim pharetra ut consectetur 
+                odio pharetra. </p>
+              <button><a href="#">Learn More</a></button>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-lg-6">
+          <div class="our-doctor-wrapper">
+            <div class="doctor-heading">
+              <div class="doctor-img">
+                <img src="./src/45.png" alt="Image" class="img-fluid">
+              </div>
+              <h3>Our Doctors</h3>
+            </div>
+            <div class="doctor-content">
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque ornare scelerisque erat vel rutrum. 
+                Duis sem enim, tempor sed gravida imperdiet, bibendum et purus. Donec egestas lectus at sapien 
+                hendrerit non convallis magna scelerisque. Mauris hendrerit erat sit amet enim pharetra ut consectetur 
+                odio pharetra. </p>
+              <button><a href="#">Learn More</a></button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<!-- Affiliates -->
+<section>
+  <div class="container">
+    <div class="affiliates-wrapper">
+      <div class="row d-flex justify-content-between align-items-center">
+        <div class="col-6 col-lg-3">
+          <div class="affiliate-img">
+            <img src="./src/40.png" alt="Image" class="img-fluid">
+          </div>
+        </div>
+        <div class="col-6 col-lg-3">
+          <div class="affiliate-img">
+            <img src="./src/42.png" alt="Image" class="img-fluid">
+          </div>
+        </div>
+        <div class="col-6 col-lg-3">
+          <div class="affiliate-img">
+            <img src="./src/41.png" alt="Image" class="img-fluid">
+          </div>
+        </div>
+        <div class="col-6 col-lg-3">
+          <div class="affiliate-img">
+            <img src="./src/39.png" alt="Image" class="img-fluid">
           </div>
         </div>
       </div>
