--- a/index.html
+++ b/index.html
@@ -237,6 +237,249 @@
     </div>
   </div>
 </div>
+<!-- Why Choose Us -->
+<section>
+  <div class="container-fluid">
+    <div class="choose-us-heading-wrapper">
+      <div class="container">
+        <div class="row">
+          <div class="col-12 col-lg-8">
+            <div class="choose-us-heading">
+              <h3>Lorem ipsum dolor sit amet</h3>
+              <h6>Quisque sit amet tortor nulla, sit amet tempus metus</h6>
+            </div>
+          </div>
+          <div class="col-12 col-lg-4 ">
+            <div class="contact-btn">
+              <button><a href="#">Contact Us Now</a></button>
+            </div>
+          </div>
+        </div> 
+      </div>
+    </div>
+    <div class="choose-us-content-wrapper">
+      <div class="container">
+        <div class="row d-flex">
+          <div class="col-12 col-lg-6">
+            <div class="choose-us-img">
+              <img src="./src/25.png" alt="Image" class="img-fluid">
+            </div>
+          </div>
+          <div class="col-12 col-lg-6">
+            <div class="choose-us-content">
+              <h6>Why Choose Us</h6>
+              <h3>Lorem ipsum dolor sit amet</h3>
+              <p>The Magdalene Clinic provides deeply affirming, collaborative care for pregnant women 
+                with substance use disorders (SUD) in South Carolina. 
+                Our providers offer prenatal care, mental health counseling, and peer support for women at any stage of their 
+                disease process, all under one roof.</p>
+                <div class="choose-us-point-wrapper">
+                  <div class="choose-us-point">
+                    <div class="choose-us-point-icon">
+                      <img src="./src/24.png" alt="Image" class="img-fluid">
+                    </div>
+                    <div class="choose-us-point-content">
+                      <p>Our providers are family medicine physicians who are OB trained.</p>
+                    </div>
+                  </div>
+                  <div class="choose-us-point">
+                    <div class="choose-us-point-icon">
+                      <img src="./src/24.png" alt="Image" class="img-fluid">
+                    </div>
+                    <div class="choose-us-point-content">
+                      <p>This enables them to care from people from “womb to tomb”.</p>
+                    </div>
+                  </div>
+                  <div class="choose-us-point">
+                    <div class="choose-us-point-icon">
+                      <img src="./src/24.png" alt="Image" class="img-fluid">
+                    </div>
+                    <div class="choose-us-point-content">
+                      <p>We also have a pediatrician who works out of our office.</p>
+                    </div>
+                  </div>
+                  <div class="choose-us-point">
+                    <div class="choose-us-point-icon">
+                      <img src="./src/24.png" alt="Image" class="img-fluid">
+                    </div>
+                    <div class="choose-us-point-content">
+                      <p>This allows us to encompass the entire family into care and provide 
+                        care long after the baby is born.</p>
+                    </div>
+                  </div>
+                </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="we-are-here">
+        <img src="./src/23.png" alt="Image" class="img-fluid">
+      </div>
+    </div>
+  </div>
+</section>
+<!-- Service Areas -->
+<section>
+  <div class="container">
+    <div class="service-area-wrapper">
+      <div class="row">
+        <div class="col-12 col-lg-6">
+          <div class="service-area">
+            <h6>Service Area</h6>
+            <h3>Lorem ipsum dolor sit amet</h3>
+            <p>The Magdalene Clinic is a place that cares for pregnant women with substance use disorders (SUD) 
+              in <span class="oconee">Oconee County, South Carolina.</span></p>
+            <p>About Oconee County (and the need for the Oconee County Magdalene Clinic):</p>
+            <div class="population">
+              <h6>Oconee Country population : 79,546.</h6>
+            </div>
+            <div class="service-area-points">
+              <p>In 2019, the country experienced 37.5 drug orverdose death per 100,000 persons, 
+                ranking as the second highest in the state for drug overdose deaths.</p>
+            </div>
+            <div class="service-area-points">
+              <p>In that same year, 106 people per 100,000 suffered nonfatal overdoses in Oconee County.</p>
+            </div>
+            <div class="service-area-points">
+              <p>In 2017, 13 per 1,000 newborns were identified with neonatal abstinence syndrome.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-lg-6">
+          <div class="map-wrapper">
+            <div class="location-wrapper">
+              <div class="location-txt">
+                <p>Oconee County, South Carolina</p>
+              </div>
+              <div class="location-icon">
+                <img src="./src/27.png" alt="Image" class="img-fluid">
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<!-- Always Safe -->
+<section>
+  <div class="container-fluid">
+    <div class="always-safe-wrapper">
+      <div class="container">
+        <div class="row d-flex justify-content-center">
+          <div class="col-12 col-lg-6">
+            <div class="always-safe-content">
+              <h3>Your are always safe with us. We are ready to help any time</h3>
+              <h6>Quisque sit amet tortor nulla, sit amet tempus metus</h6>
+              <div class="safe-contact-btn">
+                <button><a href="#">Contact Us Now</a></button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<!-- Testimonials -->
+<section>
+  <div class="container">
+    <div class="testimonial-wrapper">
+      <div class="row d-flex justify-content-center"> 
+        <div class="col-12 col-lg-6">
+          <div class="testimonial-heading">
+            <h6>Testimonilas</h6>
+            <h3>What they say about us?</h3>
+            <div class="testimonial-icon">
+              <img src="./src/32.png" alt="Image" class="img-fluid">
+            </div>
+            <div class="testimonial-rating-star">
+              <img src="./src/38.png" alt="Image" class="img-fluid">
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-12">
+          <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+              <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+              <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+              <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+            </ol>
+            <div class="carousel-inner">
+              <div class="carousel-item active ">
+                <div class="testimonial-content-wrapper">
+                  <div class="testimonial-content">
+                    <p>Quisque sit amet tortor nulla, sit amet tempus metus. Vivamus placerat scelerisque sapien vitae aliquet. 
+                      Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Mauris massa eros, porttitor sed tempus in, 
+                      pretium mattis sapien. Praesent fringilla odio vitae est vehicula facilisis. Vestibulum accumsan molestie dictum. 
+                      Integer nec sodales leo. PhaselluLorem Ipsum is simply dummy .</p>
+                  </div>
+                  <div class="user-wrapper">
+                    <div class="user-display">
+                      <h2>J</h2>
+                      </div>
+                    <div class="user-detail">
+                      <p>John Doe</p>
+                      <h6>CEO of Company</h6>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <div class="testimonial-content-wrapper">
+                  <div class="testimonial-content">
+                    <p>Quisque sit amet tortor nulla, sit amet tempus metus. Vivamus placerat scelerisque sapien vitae aliquet. 
+                      Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Mauris massa eros, porttitor sed tempus in, 
+                      pretium mattis sapien. Praesent fringilla odio vitae est vehicula facilisis. Vestibulum accumsan molestie dictum. 
+                      Integer nec sodales leo. PhaselluLorem Ipsum is simply dummy .</p>
+                  </div>
+                  <div class="user-wrapper">
+                    <div class="user-display">
+                      <h2>J</h2>
+                      </div>
+                    <div class="user-detail">
+                      <p>John Doe</p>
+                      <h6>CEO of Company</h6>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <div class="testimonial-content-wrapper">
+                  <div class="testimonial-content">
+                    <p>Quisque sit amet tortor nulla, sit amet tempus metus. Vivamus placerat scelerisque sapien vitae aliquet. 
+                      Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Mauris massa eros, porttitor sed tempus in, 
+                      pretium mattis sapien. Praesent fringilla odio vitae est vehicula facilisis. Vestibulum accumsan molestie dictum. 
+                      Integer nec sodales leo. PhaselluLorem Ipsum is simply dummy .</p>
+                  </div>
+                  <div class="user-wrapper">
+                    <div class="user-display">
+                      <h2>J</h2>
+                      </div>
+                    <div class="user-detail">
+                      <p>John Doe</p>
+                      <h6>CEO of Company</h6>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
 <!-- Doctor Patient Section-->
 <section>
   <div class="container">
