--- a/index.html
+++ b/index.html
@@ -85,26 +85,23 @@
       <div class="banner-wrapper">
         <div class="container">
           <div class="banner-main-wrapper">
-            <div class="row d-flex justify-content-center">
-              <div class="col-12 col-lg-6">
-                <div class="banner-content-wrapper">
-                  <div class="banner-content">
-                    <h6>Radical Love. Radical Service. A Radical Change.</h6>
-                    <h1>Magdalene Clinic</h1>
-                    <p>
-                      Our aim is to provide a safe, non-judgmental, loving space
-                      for women who are using or have used illicit drugs during
-                      their pregnancy to seek prenatal care.
-                    </p>
-                  </div>
-                  <div class="banner-btn">
-                    <div class="help-btn">
-                      <button><a href="#">Help Me</a></button>
-                    </div>
-                    <div class="patient-btn">
-                      <button><a href="#">Patient Refferals</a></button>
-                    </div>
-                  </div>
+            <div class="banner-content-wrapper">
+              <div class="banner-content">
+                <h6>Radical Love. Radical Service. A Radical Change.</h6>
+                <h1>Magdalene Clinic</h1>
+                <p>
+                  Our aim is to provide a safe, non-judgmental, loving space for
+                  women who are using<br />
+                  or have used illicit drugs during their pregnancy to seek
+                  prenatal care.
+                </p>
+              </div>
+              <div class="banner-btn">
+                <div class="help-btn">
+                  <button><a href="#">Help Me</a></button>
+                </div>
+                <div class="patient-btn">
+                  <button><a href="#">Patient Refferals</a></button>
                 </div>
               </div>
             </div>
@@ -427,19 +424,17 @@
     </section>
     <!-- Always Safe -->
     <section>
-      <div class="container-fluid">
-        <div class="always-safe-wrapper">
-          <div class="container">
-            <div class="row d-flex justify-content-center">
-              <div class="col-12 col-lg-6">
-                <div class="always-safe-content">
-                  <h3>
-                    Your are always safe with us. We are ready to help any time
-                  </h3>
-                  <h6>Quisque sit amet tortor nulla, sit amet tempus metus</h6>
-                  <div class="safe-contact-btn">
-                    <button><a href="#">Contact Us Now</a></button>
-                  </div>
+      <div class="always-safe-wrapper">
+        <div class="container">
+          <div class="row d-flex justify-content-center">
+            <div class="col-12 col-lg-6">
+              <div class="always-safe-content">
+                <h3>
+                  Your are always safe with us. We are ready to help any time
+                </h3>
+                <h6>Quisque sit amet tortor nulla, sit amet tempus metus</h6>
+                <div class="safe-contact-btn">
+                  <button><a href="#">Contact Us Now</a></button>
                 </div>
               </div>
             </div>
@@ -675,7 +670,7 @@
       </div>
     </section>
     <!-- Footer Section -->
-    <div class="container-fluid">
+    <div class="">
       <div class="footer-wrapper">
         <div class="container">
           <div class="footer-icon-wrapper">
@@ -687,7 +682,7 @@
                       ><img src="./src/54.png" alt="Image" class="img-fluid"
                     /></a>
                   </div>
-                  <div class="icon-text mt-3">
+                  <div class="icon-text mt-3 pl-3">
                     <h6>Magdalene Clinic Oconee</h6>
                     <p>139 Lila Doyle Drive, Seneca, SC, 29672</p>
                   </div>
@@ -700,7 +695,7 @@
                       ><img src="./src/53.png" alt="Image" class="img-fluid"
                     /></a>
                   </div>
-                  <div class="icon-text mt-3">
+                  <div class="icon-text mt-3 pl-3">
                     <h6>Call us now</h6>
                     <p>(864) 482-3483, press 9 - then press 1</p>
                   </div>
@@ -713,7 +708,7 @@
                       ><img src="./src/52.png" alt="Image" class="img-fluid"
                     /></a>
                   </div>
-                  <div class="icon-text mt-3">
+                  <div class="icon-text mt-3 pl-3">
                     <h6>Need support? Drop us an email</h6>
                     <p>magdaleneclinicoconee@prismahealth.org</p>
                   </div>
@@ -816,18 +811,9 @@
     </div>
     <!-- Copyright Section -->
     <section>
-      <div class="container-fluid">
-        <div class="copyright-wrapper">
-          <div class="row">
-            <div class="col-12">
-              <div class="copyright text-center pt-3">
-                <p>
-                  © 2023 Magdalene Clinic · All Rights Reserved · Privacy
-                  Policy·
-                </p>
-              </div>
-            </div>
-          </div>
+      <div class="copyright-wrapper">
+        <div class="copyright text-center py-4">
+          <p>© 2023 Magdalene Clinic · All Rights Reserved · Privacy Policy·</p>
         </div>
       </div>
     </section>
