--- a/index.html
+++ b/index.html
@@ -199,71 +199,73 @@
       </div>
     </section>
     <!-- Services Section -->
-    <div class="service-wrapper">
-      <div class="container">
-        <div class="row">
-          <div class="col-12">
-            <div class="service-heading">
-              <h6>Our Services</h6>
-              <h3>Lorem ipsum dolor sit amet</h3>
-            </div>
-          </div>
-        </div>
-        <div class="row d-flex no-gutters">
-          <div class="col-12 col-lg-4">
-            <div class="service-card-wrapper">
-              <div class="service-card-img d-flex justify-content-center">
-                <img src="./src/16.png" alt="Image" class="img-fluid" />
-              </div>
-              <div class="service-arrow">
-                <div class="arrow-down"></div>
-              </div>
-              <div class="service-card-content">
-                <h6>Prenatal Care (care for pregnant women)</h6>
-                <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                  Quisque ornare scelerisque erat vel rutrum. Duis sem enim,
-                  tempor gravida.
-                </p>
-                <button><a href="#">Read More »</a></button>
+    <div class="container-fluid">
+      <div class="service-wrapper">
+        <div class="container">
+          <div class="row">
+            <div class="col-12">
+              <div class="service-heading">
+                <h6>Our Services</h6>
+                <h3>Lorem ipsum dolor sit amet</h3>
               </div>
             </div>
           </div>
-          <div class="col-12 col-lg-4">
-            <div class="service-card-wrapper">
-              <div class="service-card-content service-card-content-mid">
-                <h6>Mental Health Counseling</h6>
-                <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                  Quisque ornare scelerisque erat vel rutrum. Duis sem enim,
-                  tempor gravida.
-                </p>
-                <button><a href="#">Read More »</a></button>
-              </div>
-              <div class="service-arrow">
-                <div class="arrow-up"></div>
-              </div>
-              <div class="service-card-img d-flex justify-content-center">
-                <img src="./src/19.png" alt="Image" class="img-fluid" />
+          <div class="row d-flex no-gutters">
+            <div class="col-12 col-lg-4">
+              <div class="service-card-wrapper">
+                <div class="service-card-img d-flex justify-content-center">
+                  <img src="./src/16.png" alt="Image" class="img-fluid" />
+                </div>
+                <div class="service-arrow">
+                  <div class="arrow-down"></div>
+                </div>
+                <div class="service-card-content">
+                  <h6>Prenatal Care (care for pregnant women)</h6>
+                  <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Quisque ornare scelerisque erat vel rutrum. Duis sem enim,
+                    tempor gravida.
+                  </p>
+                  <button><a href="#">Read More »</a></button>
+                </div>
               </div>
             </div>
-          </div>
-          <div class="col-12 col-lg-4">
-            <div class="service-card-wrapper">
-              <div class="service-card-img d-flex justify-content-center">
-                <img src="./src/20.png" alt="Image" class="img-fluid" />
+            <div class="col-12 col-lg-4">
+              <div class="service-card-wrapper">
+                <div class="service-card-content service-card-content-mid">
+                  <h6>Mental Health Counseling</h6>
+                  <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Quisque ornare scelerisque erat vel rutrum. Duis sem enim,
+                    tempor gravida.
+                  </p>
+                  <button><a href="#">Read More »</a></button>
+                </div>
+                <div class="service-arrow">
+                  <div class="arrow-up"></div>
+                </div>
+                <div class="service-card-img d-flex justify-content-center">
+                  <img src="./src/19.png" alt="Image" class="img-fluid" />
+                </div>
               </div>
-              <div class="service-arrow">
-                <div class="arrow-down"></div>
-              </div>
-              <div class="service-card-content">
-                <h6>Peer support for women struggling</h6>
-                <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                  Quisque ornare scelerisque erat vel rutrum. Duis sem enim,
-                  tempor gravida.
-                </p>
-                <button><a href="#">Read More »</a></button>
+            </div>
+            <div class="col-12 col-lg-4">
+              <div class="service-card-wrapper">
+                <div class="service-card-img d-flex justify-content-center">
+                  <img src="./src/20.png" alt="Image" class="img-fluid" />
+                </div>
+                <div class="service-arrow">
+                  <div class="arrow-down"></div>
+                </div>
+                <div class="service-card-content">
+                  <h6>Peer support for women struggling</h6>
+                  <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Quisque ornare scelerisque erat vel rutrum. Duis sem enim,
+                    tempor gravida.
+                  </p>
+                  <button><a href="#">Read More »</a></button>
+                </div>
               </div>
             </div>
           </div>
@@ -406,14 +408,7 @@
             </div>
             <div class="col-12 col-lg-6">
               <div class="map-wrapper">
-                <div class="location-wrapper">
-                  <div class="location-txt">
-                    <p>Oconee County, South Carolina</p>
-                  </div>
-                  <div class="location-icon">
-                    <img src="./src/27.png" alt="Image" class="img-fluid" />
-                  </div>
-                </div>
+                <img src="./src/27.png" alt="Image" class="img-fluid" />
               </div>
             </div>
           </div>
@@ -422,17 +417,19 @@
     </section>
     <!-- Always Safe -->
     <section>
-      <div class="always-safe-wrapper">
-        <div class="container">
-          <div class="row d-flex justify-content-center">
-            <div class="col-12 col-lg-6">
-              <div class="always-safe-content">
-                <h3>
-                  Your are always safe with us. We are ready to help any time
-                </h3>
-                <h6>Quisque sit amet tortor nulla, sit amet tempus metus</h6>
-                <div class="safe-contact-btn">
-                  <button><a href="#">Contact Us Now</a></button>
+      <div class="container-fluid">
+        <div class="always-safe-wrapper">
+          <div class="container">
+            <div class="row d-flex justify-content-center">
+              <div class="col-12 col-lg-6">
+                <div class="always-safe-content">
+                  <h3>
+                    Your are always safe with us. We are ready to help any time
+                  </h3>
+                  <h6>Quisque sit amet tortor nulla, sit amet tempus metus</h6>
+                  <div class="safe-contact-btn">
+                    <button><a href="#">Contact Us Now</a></button>
+                  </div>
                 </div>
               </div>
             </div>
@@ -668,7 +665,7 @@
       </div>
     </section>
     <!-- Footer Section -->
-    <div class="">
+    <div class="container-fluid">
       <div class="footer-wrapper">
         <div class="container">
           <div class="footer-icon-wrapper">
@@ -680,7 +677,7 @@
                       ><img src="./src/54.png" alt="Image" class="img-fluid"
                     /></a>
                   </div>
-                  <div class="icon-text mt-3 pl-3">
+                  <div class="icon-text mt-3">
                     <h6>Magdalene Clinic Oconee</h6>
                     <p>139 Lila Doyle Drive, Seneca, SC, 29672</p>
                   </div>
@@ -693,7 +690,7 @@
                       ><img src="./src/53.png" alt="Image" class="img-fluid"
                     /></a>
                   </div>
-                  <div class="icon-text mt-3 pl-3">
+                  <div class="icon-text mt-3">
                     <h6>Call us now</h6>
                     <p>(864) 482-3483, press 9 - then press 1</p>
                   </div>
@@ -706,7 +703,7 @@
                       ><img src="./src/52.png" alt="Image" class="img-fluid"
                     /></a>
                   </div>
-                  <div class="icon-text mt-3 pl-3">
+                  <div class="icon-text mt-3">
                     <h6>Need support? Drop us an email</h6>
                     <p>magdaleneclinicoconee@prismahealth.org</p>
                   </div>
@@ -809,9 +806,18 @@
     </div>
     <!-- Copyright Section -->
     <section>
-      <div class="copyright-wrapper">
-        <div class="copyright text-center py-4">
-          <p>© 2023 Magdalene Clinic · All Rights Reserved · Privacy Policy·</p>
+      <div class="container-fluid">
+        <div class="copyright-wrapper">
+          <div class="row">
+            <div class="col-12">
+              <div class="copyright text-center pt-3">
+                <p>
+                  © 2023 Magdalene Clinic · All Rights Reserved · Privacy
+                  Policy·
+                </p>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </section>
