--- a/index.html
+++ b/index.html
@@ -24,58 +24,67 @@
       <div class="container-fluid">
         <div class="nav-wrapper">
           <div class="row justify-content-between">
-            <div class="logo">
-              <img src="./src/2.png" alt="Logo" class="img-fluid" />
+            <div class="col-6 col-lg-2">
+              <div class="logo">
+                <img src="./src/2.png" alt="Logo" class="img-fluid" />
+              </div>
             </div>
-            <div class="d-flex">
-              <nav class="navbar navbar-expand-lg navbar-light">
-                <button
-                  class="navbar-toggler mx-auto"
-                  type="button"
-                  data-toggle="collapse"
-                  data-target="#navbarSupportedContent"
-                  aria-controls="navbarSupportedContent"
-                  aria-expanded="false"
-                  aria-label="Toggle navigation"
-                >
-                  <span class="navbar-toggler-icon"></span>
-                </button>
-                <div
-                  class="collapse navbar-collapse"
-                  id="navbarSupportedContent"
-                >
-                  <ul class="navbar-nav mx-auto">
-                    <li class="nav-item nav-item1">
-                      <a class="nav-link nav-link1" href="#">HOME</a>
-                    </li>
-                    <li class="nav-item nav-item1">
-                      <a class="nav-link nav-link1" href="#">OUR PATIENTS</a>
-                    </li>
-                    <li class="nav-item nav-item1">
-                      <a class="nav-link nav-link1" href="#"
-                        >PROVIDERS/REFERRALS</a
-                      >
-                    </li>
-                    <li class="nav-item nav-item1">
-                      <a class="nav-link nav-link1" href="#">RESOURCES</a>
-                    </li>
-                    <li class="nav-item nav-item1">
-                      <a class="nav-link nav-link1" href="#">MEET US</a>
-                    </li>
-                    <li class="nav-item nav-item1">
-                      <a class="nav-link nav-link1" href="#">CONTACT</a>
-                    </li>
-                  </ul>
-                </div>
-              </nav>
+            <div class="col-6 col-lg-6">
+              <div class="nav-content">
+                <nav class="navbar navbar-expand-lg navbar-light">
+                  <button
+                    class="navbar-toggler mx-auto"
+                    type="button"
+                    data-toggle="collapse"
+                    data-target="#navbarSupportedContent"
+                    aria-controls="navbarSupportedContent"
+                    aria-expanded="false"
+                    aria-label="Toggle navigation"
+                  >
+                    <span class="navbar-toggler-icon"></span>
+                  </button>
+                  <div
+                    class="collapse navbar-collapse"
+                    id="navbarSupportedContent"
+                  >
+                    <ul class="navbar-nav mx-auto">
+                      <li class="nav-item nav-item1">
+                        <a class="nav-link nav-link1" href="#">HOME</a>
+                      </li>
+                      <li class="nav-item nav-item1">
+                        <a class="nav-link nav-link1" href="#">OUR PATIENTS</a>
+                      </li>
+                      <li class="nav-item nav-item1">
+                        <a class="nav-link nav-link1" href="#"
+                          >PROVIDERS/REFERRALS</a
+                        >
+                      </li>
+                      <li class="nav-item nav-item1">
+                        <a class="nav-link nav-link1" href="#">RESOURCES</a>
+                      </li>
+                      <li class="nav-item nav-item1">
+                        <a class="nav-link nav-link1" href="#">MEET US</a>
+                      </li>
+                      <li class="nav-item nav-item1">
+                        <a class="nav-link nav-link1" href="#">CONTACT</a>
+                      </li>
+                    </ul>
+                  </div>
+                </nav>
+              </div>
             </div>
-            <div class="call-us">
-              <button>call us for consultation</button>
-              <p class="contact">(864) 482-348</p>
+            <div class="col-6 col-lg-2">
+              <div class="call-us">
+                <button>call us for consultation</button>
+                <p class="contact">(864) 482-348</p>
+              </div>
             </div>
-            <div class="appointment">
-              <button>make an appointment</button>
+            <div class="col-6 col-lg-2">
+              <div class="appointment">
+                <button>make an appointment</button>
+              </div>
             </div>
+            
           </div>
         </div>
       </div>
@@ -98,10 +107,10 @@
               </div>
               <div class="banner-btn">
                 <div class="help-btn">
-                  <button><a href="#">Help Me</a></button>
+                  <button>Help Me</button>
                 </div>
                 <div class="patient-btn">
-                  <button><a href="#">Patient Refferals</a></button>
+                  <button>Patient Refferals</button>
                 </div>
               </div>
             </div>
@@ -177,8 +186,6 @@
                   experienced as feeling at times shamed, judged, or
                   misunderstood by providers in the prenatal setting. There has
                   to be a better way, we said. What could that look like?
-                </p>
-                <p>
                   The Magdalene Clinic represents our response to the need we
                   found in our own community for pregnant women with SUD to
                   receive compassionate medical care and social support under
@@ -186,7 +193,7 @@
                 </p>
               </div>
               <div class="about-btn">
-                <button><a href="#">More About Us</a></button>
+                <button>More About Us</button>
               </div>
             </div>
             <div class="col-12 col-lg-6">
@@ -225,25 +232,25 @@
                   Quisque ornare scelerisque erat vel rutrum. Duis sem enim,
                   tempor gravida.
                 </p>
-                <button><a href="#">Read More »</a></button>
+                <button>Read More »</button>
               </div>
             </div>
           </div>
           <div class="col-12 col-lg-4">
             <div class="service-card-wrapper">
-              <div class="service-card-content service-card-content-mid">
+              <div class="service-card-content-mid">
                 <h6>Mental Health Counseling</h6>
                 <p>
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                   Quisque ornare scelerisque erat vel rutrum. Duis sem enim,
                   tempor gravida.
                 </p>
-                <button><a href="#">Read More »</a></button>
+                <button>Read More »</button>
               </div>
               <div class="service-arrow">
                 <div class="arrow-up"></div>
               </div>
-              <div class="service-card-img d-flex justify-content-center">
+              <div class="service-card-img1 d-flex justify-content-center">
                 <img src="./src/19.png" alt="Image" class="img-fluid" />
               </div>
             </div>
@@ -263,7 +270,7 @@
                   Quisque ornare scelerisque erat vel rutrum. Duis sem enim,
                   tempor gravida.
                 </p>
-                <button><a href="#">Read More »</a></button>
+                <button>Read More »</button>
               </div>
             </div>
           </div>
@@ -283,7 +290,7 @@
             </div>
             <div class="col-12 col-lg-4">
               <div class="contact-btn">
-                <button><a href="#">Contact Us Now</a></button>
+                <button>Contact Us Now</button>
               </div>
             </div>
           </div>
@@ -386,7 +393,7 @@
                 <div class="service-area-points">
                   <p>
                     In 2019, the country experienced 37.5 drug orverdose death
-                    per 100,000 persons, ranking as the second highest in the
+                    per 100,000 persons, ranking as the secondghest in the
                     state for drug overdose deaths.
                   </p>
                 </div>
@@ -418,14 +425,14 @@
       <div class="always-safe-wrapper">
         <div class="container">
           <div class="row d-flex justify-content-center">
-            <div class="col-12 col-lg-6">
+            <div class="col-12 col-lg-12">
               <div class="always-safe-content">
                 <h3>
                   Your are always safe with us. We are ready to help any time
                 </h3>
                 <h6>Quisque sit amet tortor nulla, sit amet tempus metus</h6>
                 <div class="safe-contact-btn">
-                  <button><a href="#">Contact Us Now</a></button>
+                  <button>Contact Us Now</button>
                 </div>
               </div>
             </div>
