--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
       </div>
     </section>
     <!-- Banner Section -->
-    <section>
+    <section class="banner-section-main-wrapper">
       <div class="banner-wrapper">
         <div class="container">
           <div class="banner-main-wrapper">
@@ -121,66 +121,68 @@
                 <h1>Magdalene Clinic</h1>
                 <p>
                   Our aim is to provide a safe, non-judgmental, loving space for
-                  women who are using<br />
-                  or have used illicit drugs during their pregnancy to seek
-                  prenatal care.
+                  women who are using or have used illicit drugs during their
+                  pregnancy to seek prenatal care.
                 </p>
               </div>
               <div class="banner-btn">
                 <div class="help-btn">
-                  <button><a href="#">Help Me</a></button>
+                  <button>Help Me</button>
                 </div>
                 <div class="patient-btn">
-                  <button><a href="#">Patient Refferals</a></button>
+                  <button>Patient Refferals</button>
                 </div>
               </div>
             </div>
-            <div class="row no-gutters">
-              <div class="col-12 col-lg-4">
-                <div class="banner-card-wrapper">
-                  <div class="banner-card-img d-flex justify-content-center">
-                    <img src="./src/9.png" alt="Image" class="img-fluid" />
-                  </div>
-                  <div class="banner-card-content">
-                    <h6>All-in-One Care</h6>
-                    <p>
-                      At each visit, patients have the opportunity to meet with
-                      any or all of the following: a Maternal-Fetal Medicine
-                      physician, a women's health Nurse Practitioner, a women's
-                      health nurse.
-                    </p>
-                  </div>
+          </div>
+        </div>
+      </div>
+      <div class="section-three-boxes">
+        <div class="container">
+          <div class="row no-gutters">
+            <div class="col-12 col-lg-4">
+              <div class="banner-card-wrapper">
+                <div class="banner-card-img d-flex justify-content-center">
+                  <img src="./src/9.png" alt="Image" class="img-fluid" />
+                </div>
+                <div class="banner-card-content">
+                  <h6>All-in-One Care</h6>
+                  <p>
+                    At each visit, patients have the opportunity to meet with
+                    any or all of the following: a Maternal-Fetal Medicine
+                    physician, a women's health Nurse Practitioner, a women's
+                    health nurse.
+                  </p>
                 </div>
               </div>
-              <div class="col-12 col-lg-4">
-                <div class="banner-card-wrapper">
-                  <div class="banner-card-img d-flex justify-content-center">
-                    <img src="./src/10.png" alt="Image" class="img-fluid" />
-                  </div>
-                  <div class="banner-card-content">
-                    <h6>Dignity First</h6>
-                    <p>
-                      As part of our core values of love and transparency, we
-                      want to offer expecting mothers with substance use
-                      disorders the comfort of dignity in their experience with
-                      us. .
-                    </p>
-                  </div>
+            </div>
+            <div class="col-12 col-lg-4">
+              <div class="banner-card-wrapper">
+                <div class="banner-card-img d-flex justify-content-center">
+                  <img src="./src/10.png" alt="Image" class="img-fluid" />
+                </div>
+                <div class="banner-card-content">
+                  <h6>Dignity First</h6>
+                  <p>
+                    As part of our core values of love and transparency, we want
+                    to offer expecting mothers with substance use disorders the
+                    comfort of dignity in their experience with us. .
+                  </p>
                 </div>
               </div>
-              <div class="col-12 col-lg-4">
-                <div class="banner-card-wrapper">
-                  <div class="banner-card-img d-flex justify-content-center">
-                    <img src="./src/11.png" alt="Image" class="img-fluid" />
-                  </div>
-                  <div class="banner-card-content">
-                    <h6>Judgement-Free</h6>
-                    <p>
-                      At Magdalene Clinic we do not judge you, we are here to
-                      help, and we are a safe place to come when you may feel
-                      overwhelmed or "lost" in your pregnancy or substance use.
-                    </p>
-                  </div>
+            </div>
+            <div class="col-12 col-lg-4">
+              <div class="banner-card-wrapper">
+                <div class="banner-card-img d-flex justify-content-center">
+                  <img src="./src/11.png" alt="Image" class="img-fluid" />
+                </div>
+                <div class="banner-card-content">
+                  <h6>Judgement-Free</h6>
+                  <p>
+                    At Magdalene Clinic we do not judge you, we are here to
+                    help, and we are a safe place to come when you may feel
+                    overwhelmed or "lost" in your pregnancy or substance use.
+                  </p>
                 </div>
               </div>
             </div>
@@ -188,6 +190,7 @@
         </div>
       </div>
     </section>
+
     <!-- Welcome to Magdalene Clinic -->
     <section>
       <div class="container">
@@ -216,7 +219,7 @@
                 </p>
               </div>
               <div class="about-btn">
-                <button><a href="#">More About Us</a></button>
+                <button>More About Us</button>
               </div>
             </div>
             <div class="col-12 col-lg-6">
@@ -313,7 +316,7 @@
             </div>
             <div class="col-12 col-lg-4">
               <div class="contact-btn">
-                <button><a href="#">Contact Us Now</a></button>
+                <button>Contact Us Now</button>
               </div>
             </div>
           </div>
